# kb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml
docs/: ollama.md
src/: rag.py
src/kb/: api.py  cli.py  config.py  obsidian.py  rag.py
tests/: conftest.py  test_api.py
