[project]
name = "kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "anthropic>=0.45.2",
    "chromadb>=0.6.3",
    "langchain>=0.3.17",
    "langchain-anthropic>=0.3.5",
    "langchain-chroma>=0.2.1",
    "langchain-huggingface>=0.1.2",
    "markdown>=3.7",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "torch==2.2",
    "torchvision>=0.17.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
